syntax = "proto3";

package memos.api.v2;

import "google/api/annotations.proto";

option go_package = "gen/api/v2";

service LinkService {
  rpc GetLinkMetadata(GetLinkMetadataRequest) returns (GetLinkMetadataResponse) {
    option (google.api.http) = {get: "/api/v2/metadata"};
  }
}

// Metadata message
message Metadata {
  string title = 1;
  string description = 2;
  string image = 3;
}

// Request message for GetMetadata
message GetLinkMetadataRequest {
  string url = 1;
}

// Response message for GetMetadata
message GetLinkMetadataResponse {
  Metadata metadata = 1;
}
